<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Mystery0 on 17-12-21 上午3:41.
  ~ Copyright (c) 2017. All Rights reserved.
  ~
  ~ Last modified 17-12-20 下午5:23
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_header1"
        android:textColor="@color/schedule_text_color" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_header2"
        android:textColor="@color/schedule_text_color" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_header3"
        android:textColor="@color/schedule_text_color" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_header4"
        android:textColor="@color/schedule_text_color" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_header5"
        android:textColor="@color/schedule_text_color" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_header6"
        android:textColor="@color/schedule_text_color" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_header7"
        android:textColor="@color/schedule_text_color" />

</LinearLayout>