<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_item_height"
        android:gravity="center"
        android:text="@string/table_nav1"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_item_height"
        android:gravity="center"
        android:text="@string/table_nav2"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_item_height"
        android:gravity="center"
        android:text="@string/table_nav3"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_item_height"
        android:gravity="center"
        android:text="@string/table_nav4"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_item_height"
        android:gravity="center"
        android:text="@string/table_nav5"/>

</LinearLayout>