<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Mystery0 on 17-12-21 上午3:41.
  ~ Copyright (c) 2017. All Rights reserved.
  ~
  ~ Last modified 17-12-3 上午5:06
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/action_show_failed"
            android:title="@string/action_show_failed"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/action_experiment"
        android:title="@string/action_experiment"
        app:showAsAction="never" />
</menu>