<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Mystery0 on 17-12-21 上午3:41.
  ~ Copyright (c) 2017. All Rights reserved.
  ~
  ~ Last modified 17-12-1 下午8:29
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_nav_today"
        android:enabled="true"
        android:icon="@drawable/ic_sentiment_neutral"
        android:title="@string/nav_today"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_week"
        android:enabled="true"
        android:icon="@drawable/ic_week"
        android:title="@string/nav_week"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        app:showAsAction="ifRoom" />
</menu>