<?xml version="1.0" encoding="utf-8"?><!--
  ~                     GNU GENERAL PUBLIC LICENSE
  ~                        Version 3, 29 June 2007
  ~
  ~  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
  ~  Everyone is permitted to copy and distribute verbatim copies
  ~  of this license document, but changing it is not allowed.
  -->
<layout>

	<data />

	<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorWhiteBackground">

		<TextView
			android:id="@+id/textView_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:text="@string/title_dialog_share_with_friends"
			android:textColor="@color/colorBlackText"
			android:textSize="16sp"
			app:layout_constraintBottom_toTopOf="@id/shareLayout"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/shareLayout"
			android:layout_width="0dp"
			android:layout_height="144dp"
			app:layout_constraintBottom_toTopOf="@+id/textView_cancel"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textView_title">

			<TextView
				android:id="@+id/qqShareLayout"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/ic_share_qq"
				android:drawablePadding="8dp"
				android:gravity="center"
				android:text="@string/share_qq"
				android:textColor="@color/colorGrayText"
				app:layout_constraintBottom_toTopOf="@id/wxShareLayout"
				app:layout_constraintEnd_toStartOf="@id/qzoneShareLayout"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/qzoneShareLayout"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/ic_share_qzone"
				android:drawablePadding="8dp"
				android:gravity="center"
				android:text="@string/share_qzone"
				android:textColor="@color/colorGrayText"
				app:layout_constraintBottom_toTopOf="@id/friendShareLayout"
				app:layout_constraintEnd_toStartOf="@id/weiboShareLayout"
				app:layout_constraintStart_toEndOf="@id/qqShareLayout"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/weiboShareLayout"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/ic_share_weibo"
				android:drawablePadding="8dp"
				android:gravity="center"
				android:text="@string/share_weibo"
				android:textColor="@color/colorGrayText"
				app:layout_constraintBottom_toTopOf="@id/systemShareLayout"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/qzoneShareLayout"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/wxShareLayout"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/ic_share_weixin"
				android:drawablePadding="8dp"
				android:gravity="center"
				android:text="@string/share_weixin"
				android:textColor="@color/colorGrayText"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@id/friendShareLayout"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/qzoneShareLayout" />

			<TextView
				android:id="@+id/friendShareLayout"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/ic_share_friends"
				android:drawablePadding="8dp"
				android:gravity="center"
				android:text="@string/share_friends"
				android:textColor="@color/colorGrayText"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@id/systemShareLayout"
				app:layout_constraintStart_toEndOf="@id/wxShareLayout"
				app:layout_constraintTop_toBottomOf="@id/weiboShareLayout" />

			<TextView
				android:id="@+id/systemShareLayout"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/ic_share_more"
				android:drawablePadding="8dp"
				android:gravity="center"
				android:text="@string/share_more"
				android:textColor="@color/colorGrayText"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/friendShareLayout"
				app:layout_constraintTop_toBottomOf="@id/weiboShareLayout" />


		</androidx.constraintlayout.widget.ConstraintLayout>

		<TextView
			android:id="@+id/textView_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:text="@string/action_cancel"
			android:textColor="@color/colorBlackText"
			android:textSize="16sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/shareLayout" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>