<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Mystery0 on 18-2-17 下午3:55.
  ~ Copyright (c) 2018. All Rights reserved.
  ~
  ~ Last modified 18-2-17 下午3:55
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/spinner_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ms_hint="@string/hint_popup_view_student" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/spinner_term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_username"
        app:ms_hint="@string/hint_popup_view_year" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_term"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_year"
        app:ms_hint="@string/hint_popup_view_term" />

</android.support.constraint.ConstraintLayout>