<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Mystery0 on 17-12-21 上午3:41.
  ~ Copyright (c) 2017. All Rights reserved.
  ~
  ~ Last modified 17-12-17 下午12:38
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.weilylab.xhuschedule.activity.ScoreActivity"
    tools:showIn="@layout/activity_score">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/title_username"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/title_item_username"
            app:layout_constraintBottom_toBottomOf="@id/spinner_username"
            app:layout_constraintEnd_toStartOf="@id/spinner_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinner_username" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/spinner_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_username"
            app:layout_constraintTop_toTopOf="parent"
            app:ms_hint="@string/hint_popup_view_student" />

        <TextView
            android:id="@+id/title_year"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/title_item_year"
            app:layout_constraintBottom_toBottomOf="@id/spinner_year"
            app:layout_constraintEnd_toEndOf="@id/title_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinner_year" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@id/title_year"
            app:layout_constraintTop_toBottomOf="@id/spinner_username"
            app:ms_hint="@string/hint_popup_view_year" />

        <TextView
            android:id="@+id/title_term"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/title_item_term"
            app:layout_constraintBottom_toBottomOf="@id/spinner_year"
            app:layout_constraintEnd_toStartOf="@id/spinner_term"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/spinner_year" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_term"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/spinner_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_term"
            app:layout_constraintTop_toTopOf="@id/spinner_year"
            app:ms_hint="@string/hint_popup_view_term" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

</android.support.constraint.ConstraintLayout>
